# SkyWalk

./: .projectprofile  CMakeLists.txt  Makefile  README.md  buildproject.sh  unique.cc
cmake/: FindEvlite.cmake  FindMySQL.cmake  Targets.cmake  version.h.in
config/: asan.supp.sample  copyserver.conf.sample  crossserver.conf.sample  dataserver.conf.sample  gamedcconfig.xml.sample  gateserver.conf.sample  globalserver.conf.sample  loginserver.conf.sample  masterserver.conf.sample  sceneserver.conf.sample  svnconfig.tgz  transitserver.conf.sample  variable.xml.sample  worldserver.conf.sample
doc/: Architecture.vsdx  CrossServer.xmind  DataServer.xmind  GateServer.xmind  INSTALL.md  KCPvsTCP.xlsx  MessageDefine.docx  OPE热更.drawio  WorldServer.xmind  aoi.md  code_style.md  dataserver.md  gm_api.md  message_define.md  navigation.md  platform.drawio  登录服务器流程.docx
protocal/: CMakeLists.txt  hero.proto  itemtype.proto  mail.proto  mailtype.proto  type.proto  utils.proto
protocol/: arena.proto  base.proto  battle.proto  dungeon.proto  dungeontype.proto  herotype.proto  item.proto  role.proto  roletype.proto
scripts/: README  battle.lua  hotfix.lua  routine.lua
scripts/protocol/: arena.desc  base.desc  battle.desc  dungeon.desc  dungeontype.desc  factory.lua  hero.desc  herotype.desc  item.desc  itemtype.desc  mail.desc  mailtype.desc  role.desc  roletype.desc  type.desc  utils.desc
scripts/utils/: analysishelper.lua  class.lua  log.lua  lua_profiler.lua  luautil.lua  memorycheck.lua  memoryreferenceinfo.lua  profiler.lua  random.lua  restrict_global.lua  streambuf.lua  stringex.lua  util.lua  vec3.lua  vector.lua  xmath.lua
src/dataserver/: CMakeLists.txt  config.cpp  config.h  dbthreads.cpp  dbthreads.h  handler.cpp  handler.h  hash.h  logger.cpp  logger.h  main.cpp  reservequeue.cpp  reservequeue.h  server.cpp  server.h  startup.cpp  startup.h  tablecache.cpp  tablecache.h  task.h  transaction.cpp  transaction.h
src/dataservere/: main.cpp
src/example/behavior_tree/: AIContext.h  CMakeLists.txt  CrossDoor.cpp  main.cpp
src/example/kcp/include/: client.cpp  client.h  udpsocket.cpp  udpsocket.h  util.h
src/example/kcp/kcp_client/: CMakeLists.txt  kcp_client.cpp
src/example/kcp/kcp_multi_client/: CMakeLists.txt  kcp_multi_client.cpp  kcp_multi_client.py
src/example/kcp/kcp_server/: CMakeLists.txt  kcp_server.cpp  kcp_server.py
src/example/skiplist/: CMakeLists.txt  main.cpp
src/example/uniqueid/: CMakeLists.txt  unique.cpp
src/extra/: CMakeLists.txt  channelroute.cpp  channelroute.h  harborsvc.cpp  harborsvc.h  harbortracer.h  httpsvc.cpp  httpsvc.h  json.cpp  json.h  masterproc.cpp  masterproc.h  pb2lua.cpp  pb2lua.h  processor.h  proplock.cpp  proplock.h  robot.cpp  robot.h  schemehelper.cpp  schemehelper.h  shellcommand.h  skipdaytimer.h  ticksvc.cpp  ticksvc.h  unit.cpp  unit.h  variable.cpp  variable.h
src/gateserver/: main.cpp
src/guard/: CMakeLists.txt  guard.cpp
src/masterserver/: CMakeLists.txt  config.cpp  config.h  handler.cpp  handler.h  httprequest.cpp  httprequest.h  main.cpp  server.cpp  server.h  transaction.cpp  transaction.h
src/sceneserver/: main.cpp
src/share/base/: activity.h  base.h  battle.h  database.h  dungeon.h  endpoint.h  event.h  format.h  guild.h  hero.h  item.h  limits.h  message.h  modules.h  quest.h  resource.h  result.h  role.h  support.h  task.h  types.h
src/share/configure/: config.cpp  config.h  docparser.cpp  variableconfig.cpp  variableconfig.h  xmlparser.cpp
src/share/domain/: CMakeLists.txt  brain.h  event.cpp  event.h  metasheet.h  profiler.cpp  profiler.h  ranklist.h  rtstate.h  serverstats.cpp  serverstats.h  vec2.h  vec3.h
src/share/message/: CMakeLists.txt  dbprotocol.cpp  dbprotocol.h  gameprotocol.h  gateprotocol.h  generaldecoder.cpp  gmprotocol.h  protocol.cpp  protocol.h  streambuf.cpp
src/share/utils/: CMakeLists.txt  arguments.h  base62.cpp  base62.h  bloomfilter.cpp  bloomfilter.h  blowfish.cpp  blowfish.h  cedar.h  configcenter.cpp  configcenter.h  configfile.cpp  crc.cpp  crc.h  file.h  fileutils.cpp  fixedstring.h  hashfunc.cpp  hashfunc.h  ipcs.cpp  ipcs.h  jsarray.cpp  jsarray.h  json.cpp  json.h  logfile.cpp  lrucache.h  lz4.cpp  lz4.h  pathutils.cpp  pool_alloc.cpp  pool_alloc.h  portability.cpp  portability.h  print.cpp  random.h  reflection.h  singleton.h  skiplist.h  slice.h  (+20 more)
src/share/utils/detail/coroutine/: coroutine.c
src/worldserver/: main.cpp
tools/: build_database.sql  build_zone.sh  calcrr.sh  clear_rdb.sh  deploy.sh  json_format.bat  json_format.py  modify_database.sql  optimization.sh  runsql.sh  startup.py.sample  top.sh  update-configure
tools/cfgexport/: README  generate.py  helper.sh  xls2cpp.py  xls2xml.py  xls2xmls.py  xlsdoc.py
tools/cfgexport/xls2luas/: descriptor.py  language.py  languageToLua.py  summary_tools.py  toZip.py  xls2luas.py
tools/cfgexport/xls2luas/aftertreatments/: __init__.py  z_common_option.py
tools/cfgexport/xls2luas/plugins/: __init__.py  gen_csv.py  gen_json.py  gen_lua_cut.py  gen_lua_cut_ct.py
tools/mergezone/: afterprocess.py  datahelper.py  mergezone.py  renamedb.sh  sendmail.py  statistics.py  test_merge.sh
tools/nginx/: nginx.conf
tools/simulator/: INSTALL  README  config.ini  config.ini.sample  crc16.py  login.py  message_manager.py  patches.py  pb_to_dict.py  service.py  simulator.py
tools/simulator/message/: base_pb2.py  battle_pb2.py  dungeon_pb2.py  dungeontype_pb2.py  hero_pb2.py  herotype_pb2.py  item_pb2.py  itemtype_pb2.py  mail_pb2.py  mailtype_pb2.py  role_pb2.py  roletype_pb2.py  type_pb2.py  utils_pb2.py
tools/sqlbind/: Slice.js  StreamBuf.go  StreamBuf.js  agentgenerator.py  helper.sh  mysqltable.py  sqlbind.py  sqlbindgenerator.py
tools/take_errorcodes/: run.bat  take_errorcode.py
